--- a/.github/workflows/spinup-destroy.yml
+++ b/.github/workflows/spinup-destroy.yml
@@ -12,7 +12,7 @@ env:
   ###############################################
   ### Replace <username> with GitHub username ###
   ###############################################
-  AZURE_WEBAPP_NAME: Killercavin-ttt-app
+  AZURE_WEBAPP_NAME: killercavin-ttt-app
 
 jobs:
   setup-up-azure-resources:
